--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </article>
     <script>
     function addComment() {
-      var commentDiv = document.getElementById('comment')
+      var commentDiv = document.getElementById('comments')
       commentDiv.innerHTML = '<div><p>This research is bold and important!</p><p>I wish to join your team</p></div><div><p>posted by: <span>I swear I am not a woodchuck</span></p></div>';
     }
     </script>
